Removed .join function from on click event

--- a/views/discover.handlebars
+++ b/views/discover.handlebars
@@ -228,7 +228,7 @@
             console.log("ready!");
             $("#get-events").click(function () {
                 var locationInput = $("#location").val();
-                var categoryInput = $("#cat").val().join(",");
+                var categoryInput = $("#cat").val();
                 getEventsFoo(locationInput, categoryInput)
 
             })
