--- a/views/event-list.handlebars
+++ b/views/event-list.handlebars
@@ -145,7 +145,6 @@
     </div>
 </div>
 
-<<<<<<< HEAD
 {{!-- modal --}}
 <div id="myModal" class="modal" style="    border: 10px black;
     border-radius: 20px; display:none;  position: fixed;
@@ -162,10 +161,7 @@
     <img id="modal-image" src="assets/img/concert1.jpg" style="width: 300px; margin-left:10px;float:left;"> {{!--
     <h3 id="modalTime" style="float:left;color:black;">Time: </h3>
     <br>
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
->>>>>>> master
+
     <h3 id="modalVenue" style=" color:black;">Venue: </h3> --}}
     <div class="tab-content">
         <div class="tab-pane active" style="color: black;font-size: 24px; margin: 0 0 0 40px; line-height: 2.2;">
@@ -185,28 +181,24 @@
                 </div>
 
         </div>
-=======
-<<<<<<< HEAD
-    <h3 id="modalVenue"style=" color:black;">Venue: </h3> --}}
-=======
-   
->>>>>>> master
-                  <div class="tab-content">
-                    <div  class="tab-pane active"  style="color: black;font-size: 24px; margin: 0 0 0 40px; line-height: 2.2;">
-                        
-                            City: <span id ="modalLocation"></span><br>
-                            Time: <span id="modalTime"></span><br>
-                            Venue: <span id = "modalVenue"></span><br>
-                            URL: <a src="" id="modalVenueUrl">Check out the Venue</span>
-                        
-    <div style="position: absolute;bottom:5px;right:5px;">
-        <button style="margin:5px:" type="button" class="btn btn-primary">Interested</button>
-        <button type="button" class="btn btn-primary">Im going!</button>
-    </div>
 
-</div>
-<<<<<<< HEAD
->>>>>>> 5a8e9de462a384fc07a4851b1ef6ca3da46ecdc4
-=======
->>>>>>> db42731ead35944c3b705e301f167dd1fec7328f
->>>>>>> master
+        <h3 id="modalVenue" style=" color:black;">Venue: </h3> --}}
+
+        <div class="tab-content">
+            <div class="tab-pane active" style="color: black;font-size: 24px; margin: 0 0 0 40px; line-height: 2.2;">
+
+                City:
+                <span id="modalLocation"></span>
+                <br> Time:
+                <span id="modalTime"></span>
+                <br> Venue:
+                <span id="modalVenue"></span>
+                <br> URL:
+                <a src="" id="modalVenueUrl">Check out the Venue</span>
+
+                    <div style="position: absolute;bottom:5px;right:5px;">
+                        <button style="margin:5px:" type="button" class="btn btn-primary">Interested</button>
+                        <button type="button" class="btn btn-primary">Im going!</button>
+                    </div>
+
+            </div>
