--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,8 +4,7 @@
   <div class="w3-main" style="margin-left:250px;margin-right:40px">
     <div class="w3-padding">
       <div id="login-form" style="width:55%">
-        <h2>
-          <span class="fa fa-sign-in"></span> Log In</h2>
+        <h2>Log In</h2>
 
         <!-- show any messages that come back with authentication -->
         {{#if message}}
