--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,9 +10,6 @@
     <!--Eventful-->
     <script type="text/javascript" src="http://api.eventful.com/js/api"></script>
 
-    <!--Capture.js-->
-    {{!-- <script src="/../assets/js/capture.js"></script> --}}
-
     <!-- Moment.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 
@@ -21,8 +18,8 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
     <!-- Full Calender -->
-    <link rel='stylesheet' href='fullcalendar/fullcalendar.css'/>
-    <script src='fullcalendar/fullcalendar.js'></script>
+    {{!-- <link rel='stylesheet' href='fullcalendar/fullcalendar.css'/>
+    <script src='fullcalendar/fullcalendar.js'></script> --}}
     {{!-- <script>
         $(function() {
             // page is now ready, initialize the calendar...
@@ -65,8 +62,6 @@
         </div>
     {{/if}}
     <div class="w3-bar-block">
-        <a href="/discover" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Discover</a>
-        <a href="/check-in" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Event Check-in</a>
         {{#if isHome}}
             <a class = "w3-display-topleft w3-hide" href="/" onclick="w3_close()"> <i class="fa fa-home w3-hover-opacity w3-text-white w3-large"></i></a>
         {{else}}
@@ -74,13 +69,14 @@
         {{/if}}
         {{#if isUserLoggedIn}}
             <a href="profile" class="w3-bar-item w3-button w3-mobile">My Profile</a>
-            <a class="w3-bar-item w3-button w3-mobile" onclick="document.getElementById('settings').style.display='block'" class="w3-button">Settings</a>
             <button onclick="document.getElementById('settings').style.display='block'" class="w3-bar-item w3-button w3-mobile">Preferences</button> 
             <a href="/logout" class="w3-bar-item w3-button w3-right w3-mobile">Logout</a>
         {{else}}
             <a href="/login" onclick="w3_close()" class="w3-btn w3-hover-white" id="login">Log In</a>      
             <a href="/signup" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Sign Up</a>
         {{/if}}
+            <a href="/discover" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Discover</a>
+            <a href="/check-in" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Event Check-in</a>
     </div>
 </nav>
 
@@ -94,7 +90,7 @@
 <!-- Overlay effect when opening sidebar on small screens -->
 <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
-<body>
+<body class="w3-display-container">
 
     {{{body}}}
 
@@ -123,33 +119,4 @@
             x.className = x.className.replace(" w3-show", "");
         }
     }
-
-    function pageScroll() {  
-      var objDiv = document.getElementById("contain");
-      objDiv.scrollTop = objDiv.scrollTop + 1;  
-      $('p:nth-of-type(1)').html('scrollTop : '+ objDiv.scrollTop);
-      $('p:nth-of-type(2)').html('scrollHeight : ' + objDiv.scrollHeight);
-      if (objDiv.scrollTop == (objDiv.scrollHeight - 380)) {
-        objDiv.scrollTop = 0;
-      }
-      my_time = setTimeout('pageScroll()', 25);
-    };
-
-    // ---- Scrolling Table Of Events
-    $(document).ready(function() {
-      pageScroll();
-       $("#contain").mouseover(function() {
-        clearTimeout(my_time);
-     }).mouseout(function() {
-        pageScroll();
-      });
-    });
-
-     //  $(document).on('mouseenter', '#result-panel', function () {
-     //   $(this).find(":button").show();
-     //   }).on('mouseleave', '#result-panel', function () {
-     //   $(this).find(":button").hide();
-     //   });
-   // });
-
 </script>
