--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -69,3 +69,11 @@
 
         </div>
       </div>
+
+<script>
+  $(function () {
+    // Gets events from our database to display in each profile.
+    //var userID = $("#user-id").val();
+    getUserEvents();
+  });
+</script>
